--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev"
   },
   "dependencies": {
+    "chrome-aws-lambda": "^10.1.0",
     "next": "^14.2.11",
+    "puppeteer-core": "^23.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   }
